--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     volumes:
       - .:/code
       - ./data/static:/data/static
+      - ./data/log:/data/log
     network_mode: bridge
     ports:
       - "6688:6688"
