--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 services:
 
   development:
@@ -28,4 +28,5 @@ services:
       - "6688:6688"
     environment:
       - PYTHONPATH=/code
-
+    sysctls:
+      net.core.somaxconn: 16384
