--- a/deploy/uwsgi.ini
+++ b/deploy/uwsgi.ini
@@ -3,10 +3,10 @@ chdir     = /code
 pp        = /code
 module    = gg_server.wsgi
 master    = true
-processes = 1
+processes = 2
 vacuum    = true
 http      = 0.0.0.0:6688
-stats = /tmp/gg_server.socket
+stats = /tmp/gg_server_stats.socket
 
 env = LANG=en_US.utf8
 env = DJANGO_SETTINGS_MODULE=gg_server.settings
